route/blog.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: blog-django-ingress
  namespace: italo
  labels:
    app: blog-django-py-git
    app.kubernetes.io/component: blog-django-py-git
    app.kubernetes.io/instance: blog-django-py-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-py-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  to:
    kind: Service
    name: blog-django-py-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
