route/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  selfLink: >-
    /apis/route.openshift.io/v1/namespaces/fiap-lab4chain-rm342579/routes/blog-django-py
  resourceVersion: '54348461'
  name: blog-django-py
  uid: ea5bc8f1-1389-4ae6-96e4-c19155f2ab09
  creationTimestamp: '2022-04-06T23:37:10Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-04-06T23:37:10Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-04-06T23:37:10Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
  namespace: fiap-lab4chain-rm342579
  labels:
    app: blog-django-py
    app.kubernetes.io/component: blog-django-py
    app.kubernetes.io/instance: blog-django-py
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-py-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  host: blog-django-py-fiap-lab4chain-rm342579.apps.na46.prod.nextcle.com
  to:
    kind: Service
    name: blog-django-py
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: blog-django-py-fiap-lab4chain-rm342579.apps.na46.prod.nextcle.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2022-04-06T23:37:10Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.na46.prod.nextcle.com
